Dark mode compiler arguments input text-color fix (#2252)
* Added input:focus style for dark theme

* Updated contributors.md

--- a/static/themes/dark-theme.scss
+++ b/static/themes/dark-theme.scss
@@ -213,6 +213,12 @@ input {
     border: 0 !important;
 }
 
+input:focus {
+    color: #eee !important;
+    background-color: #474747;
+    border: 0 !important;
+}
+
 .bg-light {
     background-color: #333 !important;
 }
